Dynamically render subforms

--- a/app/templates/components/toezicht/edit-child.hbs
+++ b/app/templates/components/toezicht/edit-child.hbs
@@ -1,1 +1,5 @@
 {{component childComponentName model=model solution=solution}}
+
+{{#if subform}}
+  {{toezicht/form-node model=subform.formNode solution=solution}}
+{{/if}}
