Create separate component to render root form

--- a/app/templates/toezicht/forms/index.hbs
+++ b/app/templates/toezicht/forms/index.hbs
@@ -1,5 +1,5 @@
 {{#each model as |form|}}
-  {{toezicht/form-node model=form}}
+  {{toezicht/root-form-node model=form}}
   <hr />
 {{/each}}
 {{outlet}}
