Cleanup of relationships that are not displayed

--- a/app/templates/toezicht/forms/index.hbs
+++ b/app/templates/toezicht/forms/index.hbs
@@ -1,5 +1,3 @@
-{{#each model as |form|}}
-  {{toezicht/root-form-node model=form}}
+
+  {{toezicht/root-form-node model=model}}
   <hr />
-{{/each}}
-{{outlet}}
